--- a/.github/workflows/loadmill.yml
+++ b/.github/workflows/loadmill.yml
@@ -1,14 +1,14 @@
-name: Run Loadmill Test Plan
+name: Loadmill Test Run
 
 on:
   push:
     branches:
-      - main  # Change this if you want to trigger on another branch
+      - main
 
 jobs:
   loadmill-test:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -16,10 +16,11 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18  # Ensure compatibility
+          node-version: '20'
 
-      - name: Install Loadmill CLI
-        run: npm install -g loadmill-cli
+      - name: Install Loadmill CLI from GitHub
+        run: npm install -g loadmill/loadmill-cli
 
       - name: Run Loadmill Test Plan
+
         run: loadmill d90b3e55-1054-4ef7-885f-399f411e147b --test-plan -w -t iKDmpFveDlE0RR8mGIiniXlankIigmsXqekCeSmW
